--- a/styles/styleBlog.css
+++ b/styles/styleBlog.css
@@ -1,84 +1,4 @@
-.header__container {
-  display: flex;
-  background-color: white;
-  align-items: center;
-  padding: 0 1rem;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.header_nav__container {
-  width: 100%;
-  padding: 0 50px;
-  height: 100%;
-}
-
-.header_nav__list {
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  gap: 10rem;
-  align-items: center;
-  list-style: none;
-}
-
-.header_nav__list a {
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-  font-size: 1rem;
-  border-bottom: 2px solid transparent;
-  transition: color 0.3s ease, border-bottom 0.3s ease;
-}
-
-.header_nav__list a:hover {
-  color: rgb(77, 75, 75);
-  border-bottom: 2px solid rgb(77, 75, 75);
-}
-
-/* Botón "Registrarse" igual que en home */
-.news__button {
-  all: unset;
-  padding: 0.5rem 0.8rem;
-  width: 6rem;
-  background-color: rgb(35, 35, 43);
-  border-radius: 0.5rem;
-  cursor: pointer;
-  overflow: hidden;
-  height: fit-content;
-}
-
-.news__button a {
-  text-decoration: none;
-  color: white;
-  font-size: 0.8rem;
-  font-weight: 600;
-  display: flex;
-  gap: 0.3rem;
-  justify-content: center;
-  align-items: center;
-  transition: transform 0.3s ease;
-}
-
-.news__button svg {
-  opacity: 0;
-  transform: translateX(10px);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.news__button:hover a {
-  transform: translateX(-5px);
-}
-
-.news__button:hover svg {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-
-        
+/* Estilos generales */        
     .page{ /* Estilos para el contenedor central */
         background: linear-gradient(to bottom, rgba(255,255,255,0.92), rgba(255, 255, 255, 0.256));
         border-radius: 12px;
